Fixed many deprecations.